@startuml Event-Category API - Class Diagram

!define ENTITY_COLOR #E8F5E9
!define CONTROLLER_COLOR #E3F2FD
!define SERVICE_COLOR #FFF9C4
!define REPOSITORY_COLOR #FCE4EC
!define DTO_COLOR #F3E5F5

package "Domain Layer" {
    
    class Event <<Entity>> ENTITY_COLOR {
        - Long id
        - String name
        - LocalDate date
        - String location
        - Category category
        __
        + getId(): Long
        + getName(): String
        + getDate(): LocalDate
        + getLocation(): String
        + getCategory(): Category
    }
    
    class Category <<Entity>> ENTITY_COLOR {
        - Long id
        - String name
        - String description
        - List<Event> events
        __
        + getId(): Long
        + getName(): String
        + getDescription(): String
        + getEvents(): List<Event>
    }
    
    Event "N" --> "1" Category : belongsTo
}

package "DTO Layer" {
    
    class EventDTO <<DTO>> DTO_COLOR {
        - Long id
        - String name
        - LocalDate date
        - String location
        - Long categoryId
        - String categoryName
    }
    
    class EventCreateDTO <<DTO>> DTO_COLOR {
        - String name
        - LocalDate date
        - String location
        - Long categoryId
    }
    
    class CategoryDTO <<DTO>> DTO_COLOR {
        - Long id
        - String name
        - String description
        - Integer eventCount
    }
    
    class CategoryCreateDTO <<DTO>> DTO_COLOR {
        - String name
        - String description
    }
}

package "Repository Layer" {
    
    interface EventRepository <<Repository>> REPOSITORY_COLOR {
        + findAll(): List<Event>
        + findById(Long): Optional<Event>
        + save(Event): Event
        + deleteById(Long): void
        + findByCategory(Category): List<Event>
        + findByCategoryId(Long): List<Event>
    }
    
    interface CategoryRepository <<Repository>> REPOSITORY_COLOR {
        + findAll(): List<Category>
        + findById(Long): Optional<Category>
        + save(Category): Category
        + deleteById(Long): void
        + existsByName(String): boolean
    }
}

package "Service Layer" {
    
    class EventService <<Service>> SERVICE_COLOR {
        - EventRepository eventRepository
        - CategoryRepository categoryRepository
        __
        + getAllEvents(): List<EventDTO>
        + getEventById(Long): EventDTO
        + createEvent(EventCreateDTO): EventDTO
        + updateEvent(Long, EventCreateDTO): EventDTO
        + deleteEvent(Long): void
        + getEventsByCategory(Long): List<EventDTO>
    }
    
    class CategoryService <<Service>> SERVICE_COLOR {
        - CategoryRepository categoryRepository
        __
        + getAllCategories(): List<CategoryDTO>
        + getCategoryById(Long): CategoryDTO
        + createCategory(CategoryCreateDTO): CategoryDTO
        + updateCategory(Long, CategoryCreateDTO): CategoryDTO
        + deleteCategory(Long): void
    }
}

package "Controller Layer" {
    
    class EventController <<RestController>> CONTROLLER_COLOR {
        - EventService eventService
        __
        + GET /api/events: List<EventDTO>
        + GET /api/events/{id}: EventDTO
        + POST /api/events: EventDTO
        + PUT /api/events/{id}: EventDTO
        + DELETE /api/events/{id}: void
        + GET /api/events?categoryId={id}: List<EventDTO>
    }
    
    class CategoryController <<RestController>> CONTROLLER_COLOR {
        - CategoryService categoryService
        __
        + GET /api/categories: List<CategoryDTO>
        + GET /api/categories/{id}: CategoryDTO
        + POST /api/categories: CategoryDTO
        + PUT /api/categories/{id}: CategoryDTO
        + DELETE /api/categories/{id}: void
    }
}

' Relationships between layers
EventController --> EventService : uses
CategoryController --> CategoryService : uses

EventService --> EventRepository : uses
EventService --> CategoryRepository : uses
CategoryService --> CategoryRepository : uses

EventRepository --> Event : manages
CategoryRepository --> Category : manages

EventService ..> EventDTO : creates
EventService ..> EventCreateDTO : receives
CategoryService ..> CategoryDTO : creates
CategoryService ..> CategoryCreateDTO : receives

@enduml